Fix not responding dialog on firefox

--- a/www/assets/less/inc/base.less
+++ b/www/assets/less/inc/base.less
@@ -21,6 +21,9 @@ body {
     }
 }
 
+._dialog_overlay{
+  z-index: 0 !important;
+}
 /* .button */
 /*
 .quick-add{
@@ -85,7 +88,7 @@ section{
     &.old{
       color: red;
     }
-  }  
+  }
 }
 .fiche.patient{
   .pathologys{
